--- a/view/index.html
+++ b/view/index.html
@@ -8,16 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, minimal-ui" />
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="email=no" />
-  <link href="css/page/index.css" type="text/css" />
+  <link href="../css/page/index.css" type="text/css" />
 </head>
 
 <body>
   <div class="page">
-    <header class="header"></header>
+    <header class="header">
+      <h2>Hello GULU!</h2>
+    </header>
     <section class="main"></section>
     <footer class="footer"></footer>
   </div>
-  <script src="js/page/index.js"></script>
+  <script src="../js/page/index.js"></script>
 </body>
 
 </html>
