--- a/view/index.html
+++ b/view/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, minimal-ui" />
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="email=no" />
-  <link href="../css/page/index.css" type="text/css" />
+  <link href="../css/index.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
