--- a/view/index.html
+++ b/view/index.html
@@ -16,7 +16,9 @@
     <header class="header">
       <h2>Hello GULU!</h2>
     </header>
-    <section class="main"></section>
+    <section class="main">
+      I'm testing watch! Not working?
+    </section>
     <footer class="footer"></footer>
   </div>
   <script src="../js/page/index.js"></script>
